# last

./: .readthedocs.yaml  AUTHORS  README.md  pyproject.toml
.github/workflows/: pytest_and_autopublish.yml
docs/: api.rst  conf.py  index.rst  last_quick_start.ipynb  requirements.txt
last/: .readthedocs.yaml  __init__.py  alignments.py  contexts.py  lattices.py  scatter_reduce.py  semirings.py  weight_fns.py
tests/: alignments_test.py  contexts_test.py  last_test.py  lattices_test.py  semirings_test.py  toy_tasks_test.py  weight_fns_test.py
